--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             position: fixed;
             bottom: 20px;
             left: 20px;
-            background: linear-gradient(135deg, #FF6E00, #80EF80, #2196F3);
+            background: linear-gradient(135deg, #80EF80, #2196F3);
             color: white;
             padding: 10px 18px;
             border-radius: 10px;
